added ROKU in app purchases guide

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -59,6 +59,9 @@
       "paywall2": {
         "title": "Paywall 2.0"
       },
+      "roku-in-app-purchases": {
+        "title": "ROKU in app purchases"
+      },
       "security": {
         "title": "Security at InPlayer"
       },
