Add paywall v3.0 doc

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -62,6 +62,9 @@
       "paywall2": {
         "title": "Paywall 2.0"
       },
+      "paywall3": {
+        "title": "Paywall 3.0"
+      },
       "roku-in-app-purchases": {
         "title": "ROKU in app purchases"
       },
